k8s/Game/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: yakuphan-devops
  namespace: game
  annotations:
    external-dns.alpha.kubernetes.io/hostname: game1.am-devops.com
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: app-2048
